frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> program function
Rule 3     program -> program declaration Semi
Rule 4     program -> empty
Rule 5     type -> Int
Rule 6     function -> type Identifier LParen paramlist RParen LBrace block RBrace
Rule 7     function -> type Identifier LParen paramlist RParen Semi
Rule 8     paramlist -> paramlist Comma type Identifier
Rule 9     paramlist -> empty
Rule 10    paramlist -> type Identifier
Rule 11    block -> block block_item
Rule 12    block -> empty
Rule 13    block_item -> statement
Rule 14    block_item -> declaration Semi
Rule 15    statement -> statement_matched
Rule 16    statement -> statement_unmatched
Rule 17    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 18    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 19    statement_unmatched -> If LParen expression RParen statement
Rule 20    statement_matched -> While LParen expression RParen statement_matched
Rule 21    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 22    statement_matched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
Rule 23    statement_matched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
Rule 24    statement_unmatched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 25    statement_unmatched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 26    statement_matched -> Do statement_matched While LParen expression RParen Semi
Rule 27    statement_matched -> Return expression Semi
Rule 28    statement_matched -> opt_expression Semi
Rule 29    statement_matched -> LBrace block RBrace
Rule 30    statement_matched -> Break Semi
Rule 31    statement_matched -> Continue Semi
Rule 32    opt_expression -> expression
Rule 33    opt_expression -> empty
Rule 34    declaration -> type Identifier arrayindex
Rule 35    declaration -> type Identifier Assign expression
Rule 36    arrayindex -> empty
Rule 37    arrayindex -> arrayindex LBracket Integer RBracket
Rule 38    expression -> assignment
Rule 39    assignment -> conditional
Rule 40    conditional -> logical_or
Rule 41    logical_or -> logical_and
Rule 42    logical_and -> bit_or
Rule 43    bit_or -> xor
Rule 44    xor -> bit_and
Rule 45    bit_and -> equality
Rule 46    equality -> relational
Rule 47    relational -> additive
Rule 48    additive -> multiplicative
Rule 49    multiplicative -> unary
Rule 50    unary -> postfix
Rule 51    postfix -> primary
Rule 52    unary -> Minus unary
Rule 53    unary -> BitNot unary
Rule 54    unary -> Not unary
Rule 55    postfix -> Identifier LParen expression_list RParen
Rule 56    postfix -> postfix LBracket expression RBracket
Rule 57    expression_list -> expression_list Comma expression
Rule 58    expression_list -> empty
Rule 59    expression_list -> expression
Rule 60    assignment -> unary Assign expression
Rule 61    logical_or -> logical_or Or logical_and
Rule 62    logical_and -> logical_and And bit_or
Rule 63    bit_or -> bit_or BitOr xor
Rule 64    xor -> xor Xor bit_and
Rule 65    bit_and -> bit_and BitAnd equality
Rule 66    equality -> equality NotEqual relational
Rule 67    equality -> equality Equal relational
Rule 68    relational -> relational Less additive
Rule 69    relational -> relational Greater additive
Rule 70    relational -> relational LessEqual additive
Rule 71    relational -> relational GreaterEqual additive
Rule 72    additive -> additive Plus multiplicative
Rule 73    additive -> additive Minus multiplicative
Rule 74    multiplicative -> multiplicative Mul unary
Rule 75    multiplicative -> multiplicative Div unary
Rule 76    multiplicative -> multiplicative Mod unary
Rule 77    conditional -> logical_or Question expression Colon conditional
Rule 78    primary -> Integer
Rule 79    primary -> Identifier
Rule 80    primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 62
Assign               : 35 60
BitAnd               : 65
BitNot               : 53
BitOr                : 63
Break                : 30
Colon                : 77
Comma                : 8 57
Continue             : 31
Div                  : 75
Do                   : 26
Else                 : 17 18
Equal                : 67
For                  : 22 23 24 25
Greater              : 69
GreaterEqual         : 71
Identifier           : 6 7 8 10 34 35 55 79
If                   : 17 18 19
Int                  : 5
Integer              : 37 78
LBrace               : 6 29
LBracket             : 37 56
LParen               : 6 7 17 18 19 20 21 22 23 24 25 26 55 80
Less                 : 68
LessEqual            : 70
Minus                : 52 73
Mod                  : 76
Mul                  : 74
Not                  : 54
NotEqual             : 66
Or                   : 61
Plus                 : 72
Question             : 77
RBrace               : 6 29
RBracket             : 37 56
RParen               : 6 7 17 18 19 20 21 22 23 24 25 26 55 80
Return               : 27
Semi                 : 3 7 14 22 22 23 23 24 24 25 25 26 27 28 30 31
While                : 20 21 26
Xor                  : 64
error                : 

Nonterminals, with rules where they appear

additive             : 47 68 69 70 71 72 73
arrayindex           : 34 37
assignment           : 38
bit_and              : 44 64 65
bit_or               : 42 62 63
block                : 6 11 29
block_item           : 11
conditional          : 39 77
declaration          : 3 14 23 25
empty                : 4 9 12 33 36 58
equality             : 45 65 66 67
expression           : 17 18 19 20 21 26 27 32 35 56 57 59 60 77 80
expression_list      : 55 57
function             : 2
logical_and          : 41 61 62
logical_or           : 40 61 77
multiplicative       : 48 72 73 74 75 76
opt_expression       : 22 22 22 23 23 24 24 24 25 25 28
paramlist            : 6 7 8
postfix              : 50 56
primary              : 51
program              : 2 3 0
relational           : 46 66 67 68 69 70 71
statement            : 13 19
statement_matched    : 15 17 17 18 20 22 23 26
statement_unmatched  : 16 18 21 24 25
type                 : 6 7 8 10 34 35
unary                : 49 52 53 54 60 74 75 76
xor                  : 43 63 64

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . program function
    (3) program -> . program declaration Semi
    (4) program -> . empty
    (1) empty -> .

    Int             reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . function
    (3) program -> program . declaration Semi
    (6) function -> . type Identifier LParen paramlist RParen LBrace block RBrace
    (7) function -> . type Identifier LParen paramlist RParen Semi
    (34) declaration -> . type Identifier arrayindex
    (35) declaration -> . type Identifier Assign expression
    (5) type -> . Int

    Int             shift and go to state 6

    function                       shift and go to state 3
    declaration                    shift and go to state 4
    type                           shift and go to state 5

state 2

    (4) program -> empty .

    Int             reduce using rule 4 (program -> empty .)
    $end            reduce using rule 4 (program -> empty .)


state 3

    (2) program -> program function .

    Int             reduce using rule 2 (program -> program function .)
    $end            reduce using rule 2 (program -> program function .)


state 4

    (3) program -> program declaration . Semi

    Semi            shift and go to state 7


state 5

    (6) function -> type . Identifier LParen paramlist RParen LBrace block RBrace
    (7) function -> type . Identifier LParen paramlist RParen Semi
    (34) declaration -> type . Identifier arrayindex
    (35) declaration -> type . Identifier Assign expression

    Identifier      shift and go to state 8


state 6

    (5) type -> Int .

    Identifier      reduce using rule 5 (type -> Int .)


state 7

    (3) program -> program declaration Semi .

    Int             reduce using rule 3 (program -> program declaration Semi .)
    $end            reduce using rule 3 (program -> program declaration Semi .)


state 8

    (6) function -> type Identifier . LParen paramlist RParen LBrace block RBrace
    (7) function -> type Identifier . LParen paramlist RParen Semi
    (34) declaration -> type Identifier . arrayindex
    (35) declaration -> type Identifier . Assign expression
    (36) arrayindex -> . empty
    (37) arrayindex -> . arrayindex LBracket Integer RBracket
    (1) empty -> .

    LParen          shift and go to state 9
    Assign          shift and go to state 11
    LBracket        reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    arrayindex                     shift and go to state 10
    empty                          shift and go to state 12

state 9

    (6) function -> type Identifier LParen . paramlist RParen LBrace block RBrace
    (7) function -> type Identifier LParen . paramlist RParen Semi
    (8) paramlist -> . paramlist Comma type Identifier
    (9) paramlist -> . empty
    (10) paramlist -> . type Identifier
    (1) empty -> .
    (5) type -> . Int

    RParen          reduce using rule 1 (empty -> .)
    Comma           reduce using rule 1 (empty -> .)
    Int             shift and go to state 6

    type                           shift and go to state 13
    paramlist                      shift and go to state 14
    empty                          shift and go to state 15

state 10

    (34) declaration -> type Identifier arrayindex .
    (37) arrayindex -> arrayindex . LBracket Integer RBracket

    Semi            reduce using rule 34 (declaration -> type Identifier arrayindex .)
    LBracket        shift and go to state 16


state 11

    (35) declaration -> type Identifier Assign . expression
    (38) expression -> . assignment
    (39) assignment -> . conditional
    (60) assignment -> . unary Assign expression
    (40) conditional -> . logical_or
    (77) conditional -> . logical_or Question expression Colon conditional
    (50) unary -> . postfix
    (52) unary -> . Minus unary
    (53) unary -> . BitNot unary
    (54) unary -> . Not unary
    (41) logical_or -> . logical_and
    (61) logical_or -> . logical_or Or logical_and
    (51) postfix -> . primary
    (55) postfix -> . Identifier LParen expression_list RParen
    (56) postfix -> . postfix LBracket expression RBracket
    (42) logical_and -> . bit_or
    (62) logical_and -> . logical_and And bit_or
    (78) primary -> . Integer
    (79) primary -> . Identifier
    (80) primary -> . LParen expression RParen
    (43) bit_or -> . xor
    (63) bit_or -> . bit_or BitOr xor
    (44) xor -> . bit_and
    (64) xor -> . xor Xor bit_and
    (45) bit_and -> . equality
    (65) bit_and -> . bit_and BitAnd equality
    (46) equality -> . relational
    (66) equality -> . equality NotEqual relational
    (67) equality -> . equality Equal relational
    (47) relational -> . additive
    (68) relational -> . relational Less additive
    (69) relational -> . relational Greater additive
    (70) relational -> . relational LessEqual additive
    (71) relational -> . relational GreaterEqual additive
    (48) additive -> . multiplicative
    (72) additive -> . additive Plus multiplicative
    (73) additive -> . additive Minus multiplicative
    (49) multiplicative -> . unary
    (74) multiplicative -> . multiplicative Mul unary
    (75) multiplicative -> . multiplicative Div unary
    (76) multiplicative -> . multiplicative Mod unary

    Minus           shift and go to state 24
    BitNot          shift and go to state 25
    Not             shift and go to state 26
    Identifier      shift and go to state 17
    Integer         shift and go to state 31
    LParen          shift and go to state 29

    expression                     shift and go to state 18
    assignment                     shift and go to state 19
    conditional                    shift and go to state 20
    unary                          shift and go to state 21
    logical_or                     shift and go to state 22
    postfix                        shift and go to state 23
    logical_and                    shift and go to state 27
    primary                        shift and go to state 28
    bit_or                         shift and go to state 30
    xor                            shift and go to state 32
    bit_and                        shift and go to state 33
    equality                       shift and go to state 34
    relational                     shift and go to state 35
    additive                       shift and go to state 36
    multiplicative                 shift and go to state 37

state 12

    (36) arrayindex -> empty .

    LBracket        reduce using rule 36 (arrayindex -> empty .)
    Semi            reduce using rule 36 (arrayindex -> empty .)


state 13

    (10) paramlist -> type . Identifier

    Identifier      shift and go to state 38


state 14

    (6) function -> type Identifier LParen paramlist . RParen LBrace block RBrace
    (7) function -> type Identifier LParen paramlist . RParen Semi
    (8) paramlist -> paramlist . Comma type Identifier

    RParen          shift and go to state 39
    Comma           shift and go to state 40


state 15

    (9) paramlist -> empty .

    RParen          reduce using rule 9 (paramlist -> empty .)
    Comma           reduce using rule 9 (paramlist -> empty .)


state 16

    (37) arrayindex -> arrayindex LBracket . Integer RBracket

    Integer         shift and go to state 41


state 17

    (55) postfix -> Identifier . LParen expression_list RParen
    (79) primary -> Identifier .

    LParen          shift and go to state 42
    LBracket        reduce using rule 79 (primary -> Identifier .)
    Assign          reduce using rule 79 (primary -> Identifier .)
    Mul             reduce using rule 79 (primary -> Identifier .)
    Div             reduce using rule 79 (primary -> Identifier .)
    Mod             reduce using rule 79 (primary -> Identifier .)
    Plus            reduce using rule 79 (primary -> Identifier .)
    Minus           reduce using rule 79 (primary -> Identifier .)
    Less            reduce using rule 79 (primary -> Identifier .)
    Greater         reduce using rule 79 (primary -> Identifier .)
    LessEqual       reduce using rule 79 (primary -> Identifier .)
    GreaterEqual    reduce using rule 79 (primary -> Identifier .)
    NotEqual        reduce using rule 79 (primary -> Identifier .)
    Equal           reduce using rule 79 (primary -> Identifier .)
    BitAnd          reduce using rule 79 (primary -> Identifier .)
    Xor             reduce using rule 79 (primary -> Identifier .)
    BitOr           reduce using rule 79 (primary -> Identifier .)
    And             reduce using rule 79 (primary -> Identifier .)
    Question        reduce using rule 79 (primary -> Identifier .)
    Or              reduce using rule 79 (primary -> Identifier .)
    Semi            reduce using rule 79 (primary -> Identifier .)
    RParen          reduce using rule 79 (primary -> Identifier .)
    Comma           reduce using rule 79 (primary -> Identifier .)
    Colon           reduce using rule 79 (primary -> Identifier .)
    RBracket        reduce using rule 79 (primary -> Identifier .)


state 18

    (35) declaration -> type Identifier Assign expression .

    Semi            reduce using rule 35 (declaration -> type Identifier Assign expression .)


state 19

    (38) expression -> assignment .

    Semi            reduce using rule 38 (expression -> assignment .)
    RParen          reduce using rule 38 (expression -> assignment .)
    Comma           reduce using rule 38 (expression -> assignment .)
    Colon           reduce using rule 38 (expression -> assignment .)
    RBracket        reduce using rule 38 (expression -> assignment .)


state 20

    (39) assignment -> conditional .

    Semi            reduce using rule 39 (assignment -> conditional .)
    RParen          reduce using rule 39 (assignment -> conditional .)
    Comma           reduce using rule 39 (assignment -> conditional .)
    Colon           reduce using rule 39 (assignment -> conditional .)
    RBracket        reduce using rule 39 (assignment -> conditional .)


state 21

    (60) assignment -> unary . Assign expression
    (49) multiplicative -> unary .

    Assign          shift and go to state 43
    Mul             reduce using rule 49 (multiplicative -> unary .)
    Div             reduce using rule 49 (multiplicative -> unary .)
    Mod             reduce using rule 49 (multiplicative -> unary .)
    Plus            reduce using rule 49 (multiplicative -> unary .)
    Minus           reduce using rule 49 (multiplicative -> unary .)
    Less            reduce using rule 49 (multiplicative -> unary .)
    Greater         reduce using rule 49 (multiplicative -> unary .)
    LessEqual       reduce using rule 49 (multiplicative -> unary .)
    GreaterEqual    reduce using rule 49 (multiplicative -> unary .)
    NotEqual        reduce using rule 49 (multiplicative -> unary .)
    Equal           reduce using rule 49 (multiplicative -> unary .)
    BitAnd          reduce using rule 49 (multiplicative -> unary .)
    Xor             reduce using rule 49 (multiplicative -> unary .)
    BitOr           reduce using rule 49 (multiplicative -> unary .)
    And             reduce using rule 49 (multiplicative -> unary .)
    Question        reduce using rule 49 (multiplicative -> unary .)
    Or              reduce using rule 49 (multiplicative -> unary .)
    Semi            reduce using rule 49 (multiplicative -> unary .)
    RParen          reduce using rule 49 (multiplicative -> unary .)
    Comma           reduce using rule 49 (multiplicative -> unary .)
    Colon           reduce using rule 49 (multiplicative -> unary .)
    RBracket        reduce using rule 49 (multiplicative -> unary .)


state 22

    (40) conditional -> logical_or .
    (77) conditional -> logical_or . Question expression Colon conditional
    (61) logical_or -> logical_or . Or logical_and

    Semi            reduce using rule 40 (conditional -> logical_or .)
    RParen          reduce using rule 40 (conditional -> logical_or .)
    Comma           reduce using rule 40 (conditional -> logical_or .)
    Colon           reduce using rule 40 (conditional -> logical_or .)
    RBracket        reduce using rule 40 (conditional -> logical_or .)
    Question        shift and go to state 44
    Or              shift and go to state 45


state 23

    (50) unary -> postfix .
    (56) postfix -> postfix . LBracket expression RBracket

    Assign          reduce using rule 50 (unary -> postfix .)
    Mul             reduce using rule 50 (unary -> postfix .)
    Div             reduce using rule 50 (unary -> postfix .)
    Mod             reduce using rule 50 (unary -> postfix .)
    Plus            reduce using rule 50 (unary -> postfix .)
    Minus           reduce using rule 50 (unary -> postfix .)
    Less            reduce using rule 50 (unary -> postfix .)
    Greater         reduce using rule 50 (unary -> postfix .)
    LessEqual       reduce using rule 50 (unary -> postfix .)
    GreaterEqual    reduce using rule 50 (unary -> postfix .)
    NotEqual        reduce using rule 50 (unary -> postfix .)
    Equal           reduce using rule 50 (unary -> postfix .)
    BitAnd          reduce using rule 50 (unary -> postfix .)
    Xor             reduce using rule 50 (unary -> postfix .)
    BitOr           reduce using rule 50 (unary -> postfix .)
    And             reduce using rule 50 (unary -> postfix .)
    Question        reduce using rule 50 (unary -> postfix .)
    Or              reduce using rule 50 (unary -> postfix .)
    Semi            reduce using rule 50 (unary -> postfix .)
    RParen          reduce using rule 50 (unary -> postfix .)
    Comma           reduce using rule 50 (unary -> postfix .)
    Colon           reduce using rule 50 (unary -> postfix .)
    RBracket        reduce using rule 50 (unary -> postfix .)
    LBracket        shift and go to state 46


state 24

    (52) unary -> Minus . unary
    (50) unary -> . postfix
    (52) unary -> . Minus unary
    (53) unary -> . BitNot unary
    (54) unary -> . Not unary
    (51) postfix -> . primary
    (55) postfix -> . Identifier LParen expression_list RParen
    (56) postfix -> . postfix LBracket expression RBracket
    (78) primary -> . Integer
    (79) primary -> . Identifier
    (80) primary -> . LParen expression RParen

    Minus           shift and go to state 24
    BitNot          shift and go to state 25
    Not             shift and go to state 26
    Identifier      shift and go to state 17
    Integer         shift and go to state 31
    LParen          shift and go to state 29

    unary                          shift and go to state 47
    postfix                        shift and go to state 23
    primary                        shift and go to state 28

state 25

    (53) unary -> BitNot . unary
    (50) unary -> . postfix
    (52) unary -> . Minus unary
    (53) unary -> . BitNot unary
    (54) unary -> . Not unary
    (51) postfix -> . primary
    (55) postfix -> . Identifier LParen expression_list RParen
    (56) postfix -> . postfix LBracket expression RBracket
    (78) primary -> . Integer
    (79) primary -> . Identifier
    (80) primary -> . LParen expression RParen

    Minus           shift and go to state 24
    BitNot          shift and go to state 25
    Not             shift and go to state 26
    Identifier      shift and go to state 17
    Integer         shift and go to state 31
    LParen          shift and go to state 29

    unary                          shift and go to state 48
    postfix                        shift and go to state 23
    primary                        shift and go to state 28

state 26

    (54) unary -> Not . unary
    (50) unary -> . postfix
    (52) unary -> . Minus unary
    (53) unary -> . BitNot unary
    (54) unary -> . Not unary
    (51) postfix -> . primary
    (55) postfix -> . Identifier LParen expression_list RParen
    (56) postfix -> . postfix LBracket expression RBracket
    (78) primary -> . Integer
    (79) primary -> . Identifier
    (80) primary -> . LParen expression RParen

    Minus           shift and go to state 24
    BitNot          shift and go to state 25
    Not             shift and go to state 26
    Identifier      shift and go to state 17
    Integer         shift and go to state 31
    LParen          shift and go to state 29

    unary                          shift and go to state 49
    postfix                        shift and go to state 23
    primary                        shift and go to state 28

state 27

    (41) logical_or -> logical_and .
    (62) logical_and -> logical_and . And bit_or

    Question        reduce using rule 41 (logical_or -> logical_and .)
    Or              reduce using rule 41 (logical_or -> logical_and .)
    Semi            reduce using rule 41 (logical_or -> logical_and .)
    RParen          reduce using rule 41 (logical_or -> logical_and .)
    Comma           reduce using rule 41 (logical_or -> logical_and .)
    Colon           reduce using rule 41 (logical_or -> logical_and .)
    RBracket        reduce using rule 41 (logical_or -> logical_and .)
    And             shift and go to state 50


state 28

    (51) postfix -> primary .

    LBracket        reduce using rule 51 (postfix -> primary .)
    Assign          reduce using rule 51 (postfix -> primary .)
    Mul             reduce using rule 51 (postfix -> primary .)
    Div             reduce using rule 51 (postfix -> primary .)
    Mod             reduce using rule 51 (postfix -> primary .)
    Plus            reduce using rule 51 (postfix -> primary .)
    Minus           reduce using rule 51 (postfix -> primary .)
    Less            reduce using rule 51 (postfix -> primary .)
    Greater         reduce using rule 51 (postfix -> primary .)
    LessEqual       reduce using rule 51 (postfix -> primary .)
    GreaterEqual    reduce using rule 51 (postfix -> primary .)
    NotEqual        reduce using rule 51 (postfix -> primary .)
    Equal           reduce using rule 51 (postfix -> primary .)
    BitAnd          reduce using rule 51 (postfix -> primary .)
    Xor             reduce using rule 51 (postfix -> primary .)
    BitOr           reduce using rule 51 (postfix -> primary .)
    And             reduce using rule 51 (postfix -> primary .)
    Question        reduce using rule 51 (postfix -> primary .)
    Or              reduce using rule 51 (postfix -> primary .)
    Semi            reduce using rule 51 (postfix -> primary .)
    RParen          reduce using rule 51 (postfix -> primary .)
    Comma           reduce using rule 51 (postfix -> primary .)
    Colon           reduce using rule 51 (postfix -> primary .)
    RBracket        reduce using rule 51 (postfix -> primary .)


state 29

    (80) primary -> LParen . expression RParen
    (38) expression -> . assignment
    (39) assignment -> . conditional
    (60) assignment -> . unary Assign expression
    (40) conditional -> . logical_or
    (77) conditional -> . logical_or Question expression Colon conditional
    (50) unary -> . postfix
    (52) unary -> . Minus unary
    (53) unary -> . BitNot unary
    (54) unary -> . Not unary
    (41) logical_or -> . logical_and
    (61) logical_or -> . logical_or Or logical_and
    (51) postfix -> . primary
    (55) postfix -> . Identifier LParen expression_list RParen
    (56) postfix -> . postfix LBracket expression RBracket
    (42) logical_and -> . bit_or
    (62) logical_and -> . logical_and And bit_or
    (78) primary -> . Integer
    (79) primary -> . Identifier
    (80) primary -> . LParen expression RParen
    (43) bit_or -> . xor
    (63) bit_or -> . bit_or BitOr xor
    (44) xor -> . bit_and
    (64) xor -> . xor Xor bit_and
    (45) bit_and -> . equality
    (65) bit_and -> . bit_and BitAnd equality
    (46) equality -> . relational
    (66) equality -> . equality NotEqual relational
    (67) equality -> . equality Equal relational
    (47) relational -> . additive
    (68) relational -> . relational Less additive
    (69) relational -> . relational Greater additive
    (70) relational -> . relational LessEqual additive
    (71) relational -> . relational GreaterEqual additive
    (48) additive -> . multiplicative
    (72) additive -> . additive Plus multiplicative
    (73) additive -> . additive Minus multiplicative
    (49) multiplicative -> . unary
    (74) multiplicative -> . multiplicative Mul unary
    (75) multiplicative -> . multiplicative Div unary
    (76) multiplicative -> . multiplicative Mod unary

    Minus           shift and go to state 24
    BitNot          shift and go to state 25
    Not             shift and go to state 26
    Identifier      shift and go to state 17
    Integer         shift and go to state 31
    LParen          shift and go to state 29

    expression                     shift and go to state 51
    assignment                     shift and go to state 19
    conditional                    shift and go to state 20
    unary                          shift and go to state 21
    logical_or                     shift and go to state 22
    postfix                        shift and go to state 23
    logical_and                    shift and go to state 27
    primary                        shift and go to state 28
    bit_or                         shift and go to state 30
    xor                            shift and go to state 32
    bit_and                        shift and go to state 33
    equality                       shift and go to state 34
    relational                     shift and go to state 35
    additive                       shift and go to state 36
    multiplicative                 shift and go to state 37

state 30

    (42) logical_and -> bit_or .
    (63) bit_or -> bit_or . BitOr xor

    And             reduce using rule 42 (logical_and -> bit_or .)
    Question        reduce using rule 42 (logical_and -> bit_or .)
    Or              reduce using rule 42 (logical_and -> bit_or .)
    Semi            reduce using rule 42 (logical_and -> bit_or .)
    RParen          reduce using rule 42 (logical_and -> bit_or .)
    Comma           reduce using rule 42 (logical_and -> bit_or .)
    Colon           reduce using rule 42 (logical_and -> bit_or .)
    RBracket        reduce using rule 42 (logical_and -> bit_or .)
    BitOr           shift and go to state 52


state 31

    (78) primary -> Integer .

    LBracket        reduce using rule 78 (primary -> Integer .)
    Assign          reduce using rule 78 (primary -> Integer .)
    Mul             reduce using rule 78 (primary -> Integer .)
    Div             reduce using rule 78 (primary -> Integer .)
    Mod             reduce using rule 78 (primary -> Integer .)
    Plus            reduce using rule 78 (primary -> Integer .)
    Minus           reduce using rule 78 (primary -> Integer .)
    Less            reduce using rule 78 (primary -> Integer .)
    Greater         reduce using rule 78 (primary -> Integer .)
    LessEqual       reduce using rule 78 (primary -> Integer .)
    GreaterEqual    reduce using rule 78 (primary -> Integer .)
    NotEqual        reduce using rule 78 (primary -> Integer .)
    Equal           reduce using rule 78 (primary -> Integer .)
    BitAnd          reduce using rule 78 (primary -> Integer .)
    Xor             reduce using rule 78 (primary -> Integer .)
    BitOr           reduce using rule 78 (primary -> Integer .)
    And             reduce using rule 78 (primary -> Integer .)
    Question        reduce using rule 78 (primary -> Integer .)
    Or              reduce using rule 78 (primary -> Integer .)
    Semi            reduce using rule 78 (primary -> Integer .)
    RParen          reduce using rule 78 (primary -> Integer .)
    Comma           reduce using rule 78 (primary -> Integer .)
    Colon           reduce using rule 78 (primary -> Integer .)
    RBracket        reduce using rule 78 (primary -> Integer .)


state 32

    (43) bit_or -> xor .
    (64) xor -> xor . Xor bit_and
